[gd_scene load_steps=10 format=3 uid="uid://ci2xlwu5vik6y"]

[ext_resource type="PackedScene" uid="uid://bgn74kcc4lhjg" path="res://game_objects/Entities/Map/Map.tscn" id="1_2gv63"]
[ext_resource type="Script" path="res://game_objects/MainGame/MainGame.gd" id="1_hb21g"]
[ext_resource type="PackedScene" uid="uid://cmgpjh84qrndu" path="res://game_objects/Interface/ObjectInfoWindow/ObjectInfoWindow.tscn" id="2_bxagn"]
[ext_resource type="Resource" uid="uid://ckff60oveprwr" path="res://data_files/initial_map_layout.tres" id="3_b0djq"]
[ext_resource type="PackedScene" uid="uid://bpihfiaomkp7f" path="res://game_objects/Interface/ShipInfoWIndow/ShipInfoWindow.tscn" id="3_yrj76"]
[ext_resource type="PackedScene" uid="uid://2661wrpn6b7t" path="res://game_objects/Interface/BattleSimulator/BattleSimulator.tscn" id="4_lah5h"]
[ext_resource type="PackedScene" uid="uid://dkv1mlb7ldcg6" path="res://game_objects/Interface/ContextMenu/ContextMenu.tscn" id="5_7bf6q"]
[ext_resource type="PackedScene" uid="uid://c4wy6i42icir8" path="res://game_objects/Interface/FactionMenu/FactionMenu.tscn" id="8_l2kfs"]
[ext_resource type="PackedScene" uid="uid://dve768ivosg8" path="res://game_objects/Interface/Event/Event.tscn" id="9_lnta3"]

[node name="MainGame" type="Node2D"]
script = ExtResource("1_hb21g")

[node name="Map" parent="." node_paths=PackedStringArray("info_window", "info_window_ship", "context_menu", "battle_simulator") instance=ExtResource("1_2gv63")]
orbit_radius = null
initial_layout = ExtResource("3_b0djq")
registered_actions = null
info_window = NodePath("../CanvasGroup/ObjectInfoWindow")
info_window_ship = NodePath("../CanvasGroup/ShipInfoWindow")
player_id = null
context_menu = NodePath("../CanvasLayer/ContextMenu")
battle_simulator = NodePath("../CanvasLayer/BattleSimulator")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="Panel" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 79.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 8
size_flags_stretch_ratio = 20.0
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Info"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TurnLabel" type="Label" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TurnButton" type="Button" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Next turn"

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Panel/HBoxContainer"]
layout_mode = 2

[node name="FactionButton" type="Button" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Faction"

[node name="SaveButton" type="Button" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Load"

[node name="ContextMenu" parent="CanvasLayer" instance=ExtResource("5_7bf6q")]

[node name="BattleSimulator" parent="CanvasLayer" instance=ExtResource("4_lah5h")]

[node name="CanvasGroup" type="CanvasLayer" parent="."]

[node name="ShipInfoWindow" parent="CanvasGroup" instance=ExtResource("3_yrj76")]

[node name="ObjectInfoWindow" parent="CanvasGroup" instance=ExtResource("2_bxagn")]

[node name="FactionMenu" parent="CanvasGroup" instance=ExtResource("8_l2kfs")]
unique_name_in_owner = true

[node name="Event" parent="CanvasGroup" groups=["event_window"] instance=ExtResource("9_lnta3")]

[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer2/FactionButton" to="." method="_on_faction_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer2/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer2/LoadButton" to="." method="_on_load_button_pressed"]
